--- a/packages/api/tsconfig.build.json
+++ b/packages/api/tsconfig.build.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "noEmit": false
   },
-  "exclude": ["node_modules", "src/**/*.test.ts", "src/tests/**/*"]
+  "exclude": ["node_modules", "tests/**/*"]
 }
