--- a/packages/api/.eslintrc
+++ b/packages/api/.eslintrc
@@ -7,7 +7,7 @@
     "node": true,
     "jest/globals": true
   },
-  "extends": ["airbnb-typescript/base", "prettier"],
+  "extends": ["airbnb-base", "airbnb-typescript/base", "prettier"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
