--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,35 +15,35 @@
   },
   "dependencies": {
     "@americanairlines/simple-env": "^1.0.4",
-    "@x/web": "*",
     "@types/jest": "^27.0.1",
+    "@x/web": "*",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
     "@babel/preset-typescript": "^7.15.0",
-    "@types/dotenv-flow": "^3.1.1",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.13",
-    "@types/node": "^16.6.0",
+    "@types/node": "^16.9.1",
     "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.29.1",
-    "@typescript-eslint/parser": "^4.29.1",
-    "babel-jest": "^27.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "babel-jest": "^27.1.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-airbnb-typescript": "^14.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^24.4.0",
-    "jest": "^27.0.6",
-    "prettier": "^2.3.2",
+    "jest": "^27.1.1",
+    "prettier": "^2.4.0",
     "rimraf": "^3.0.2",
-    "supertest": "^6.1.5",
-    "ts-node": "^10.2.0",
+    "supertest": "^6.1.6",
+    "ts-node": "^10.2.1",
     "ts-node-dev": "^1.1.8",
-    "typescript": "4.3.5"
+    "typescript": "^4.4.2"
   }
 }
