--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,14 +16,15 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@x/something": "*",
-    "@chakra-ui/react": "^1.6.5",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "framer-motion": "^4",
-    "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@chakra-ui/react": "^1.6.7",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "framer-motion": "^4.1.17",
+    "next": "^11.1.2",
+    "patch-package": "6.4.7",
+    "prettier": "^2.4.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0"
   },
   "devDependencies": {
@@ -31,13 +32,13 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "@types/react": "17.0.17",
+    "@types/react": "^17.0.20",
     "@types/react-icons": "^3.0.0",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "jest": "^27.0.6",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
+    "jest": "^27.1.1",
     "npm-run-all": "^4.1.5",
-    "ts-jest": "^27.0.4",
-    "typescript": "^4.3.5"
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.2"
   }
 }
