--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "@americanairlines/simple-env": "^1.0.4",
+    "@mikro-orm/core": "^4.5.9",
+    "@mikro-orm/postgresql": "^4.5.9",
     "@types/jest": "^27.0.1",
     "@x/web": "*",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "readline-sync": "^1.4.10",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@types/dotenv-flow": "^3.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^16.9.1",
+    "@types/readline-sync": "^1.4.4",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
