--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -7,3 +7,7 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 
 # Database user is optional
 # DATABASE_USER=""
+
+## Github keys ##
+GITHUB_ID="key"
+GITHUB_SECRET="secret"
