--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -9,5 +9,5 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 # DATABASE_USER=""
 
 ## Github keys ##
-GITHUB_ID="key"
-GITHUB_SECRET="secret"
+GITHUB_ID=""
+GITHUB_SECRET=""
