--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "passport-github2": "^0.1.12",
     "patch-package": "^6.4.7"
   },
   "devDependencies": {
