--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,7 +22,9 @@
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "readline-sync": "^1.4.10",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "passport": "^0.5.0",
+    "passport-github2": "^0.1.12"
   },
   "devDependencies": {
     "@mikro-orm/cli": "^4.5.9",
@@ -30,6 +32,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.9.1",
+    "@types/passport-github2": "^1.2.5",
     "@types/readline-sync": "^1.4.4",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
