--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -25,7 +25,9 @@
     "prettier": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "passport-github2": "^0.1.12",
+    "passport": "^0.5.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
