--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,10 +21,12 @@
     "@x/web": "*",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
-    "readline-sync": "^1.4.10",
-    "winston": "^3.3.3",
+    "express-session": "^1.17.2",
     "passport": "^0.5.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "passport-session": "^1.0.2",
+    "readline-sync": "^1.4.10",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@mikro-orm/cli": "^4.5.9",
