--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -36,6 +36,7 @@
     "@types/react-icons": "^3.0.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
+    "fetch-mock-jest": "^1.5.1",
     "jest": "^27.1.1",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^27.0.5",
