--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "passport": "^0.5.0",
+    "passport-github": "^1.1.0",
     "passport-github2": "^0.1.12",
     "passport-session": "^1.0.2",
     "readline-sync": "^1.4.10",
