--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -40,6 +40,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^24.4.0",
+    "fetch-mock-jest": "^1.5.1",
     "jest": "^27.2.2",
     "prettier": "^2.4.0",
     "rimraf": "^3.0.2",
