update readme, initial tests
add instructions to set up discord oauth to readme
initial testing for discord oauth

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -12,7 +12,6 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 GITHUB_ID=""
 GITHUB_SECRET=""
 
-##add discord id##
+## Discord keys ##
 DISCORD_CLIENT_ID=""
 DISCORD_SECRET=""
-DISCORD_REDIRECT="/api/auth/dicord"
