Finish get route and create entity / migration

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -9,5 +9,6 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 # DATABASE_USER=""
 
 ## Github keys ##
-GITHUB_ID=""
+GITHUB_CLIENT_ID=""
 GITHUB_SECRET=""
+GITHUB_GRAPHQL_PAT=""
