--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "@mikro-orm/core": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
     "@x/web": "*",
+    "axios": "^0.23.0",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
     "readline-sync": "^1.4.10",
