--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -21,6 +21,7 @@
     "@x/web": "*",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "fetch-mock-jest": "^1.5.1",
     "readline-sync": "^1.4.10",
     "winston": "^3.3.3"
   },
