.env.sample update

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -11,3 +11,6 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 ## Github keys ##
 GITHUB_ID=""
 GITHUB_SECRET=""
+
+## Discord keys ##
+DISCORD_JOIN_URL=""
