--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -11,3 +11,5 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 ## Github keys ##
 GITHUB_ID=""
 GITHUB_SECRET=""
+
+APPURL="http://localhost:3000"
