Apply suggestions from code review
Co-authored-by: John Kahn <7807353+johnkahn@users.noreply.github.com>

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -12,4 +12,4 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 GITHUB_ID=""
 GITHUB_SECRET=""
 
-APPURL="http://localhost:3000"
+APP_URL="http://localhost:3000"
