Passport Middleware Draft (#33)
* test

* fix pull request OAuth

* github login redirect

* testing with passportjs

* json file updated

* middleware implementation

* 10/11 code refractoring and implement PostgreSqlDriver

* passport implementation with user session

* 10/18 meeting code refractoring

* not complete, updated

* updated format

* Fixed all the changes

* modified user.ts and user.test.ts for gitHubId

* updated with comments, still needs testing done

* tests complete, just need to make sure branch is up to date.

* final update

* renaming files

* Apply suggestions from code review

Co-authored-by: John Kahn <7807353+johnkahn@users.noreply.github.com>

Co-authored-by: Nick Vitale <ntxnick@aol.com>
Co-authored-by: TevinBeckwith <54621185+TevinBeckwith@users.noreply.github.com>
Co-authored-by: John Kahn <7807353+johnkahn@users.noreply.github.com>

--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -11,3 +11,5 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 ## Github keys ##
 GITHUB_ID=""
 GITHUB_SECRET=""
+
+APP_URL="http://localhost:3000"
