--- a/packages/api/.env.sample
+++ b/packages/api/.env.sample
@@ -1,6 +1,7 @@
 ## Generic options ##
 NODE_ENV="development"
 PORT="3000"
+APP_URL="http://localhost:3000"
 
 ## Database ##
 DATABASE_URL="postgresql://localhost:5432/project-x"
@@ -12,4 +13,7 @@ DATABASE_URL="postgresql://localhost:5432/project-x"
 GITHUB_ID=""
 GITHUB_SECRET=""
 
-APP_URL="http://localhost:3000"
+## Discord keys ##
+DISCORD_CLIENT_ID=""
+DISCORD_SECRET=""
+
