--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,6 +22,7 @@
     "@x/web": "*",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.1",
+    "fetch-mock-jest": "^1.5.1",
     "express-session": "^1.17.2",
     "passport": "^0.5.0",
     "passport-github2": "^0.1.12",
