--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,7 +28,8 @@
     "prettier": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -38,6 +39,7 @@
     "@types/passport-github2": "^1.2.5",
     "@types/react": "^17.0.20",
     "@types/react-icons": "^3.0.0",
+    "@types/yup": "^0.29.13",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "fetch-mock-jest": "^1.5.1",
