--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -20,6 +20,7 @@
     "@mikro-orm/postgresql": "^4.5.9",
     "@types/cron": "^1.7.3",
     "@types/express-session": "^1.17.4",
+    "@types/luxon": "^2.0.7",
     "@x/web": "*",
     "cookie-parser": "^1.4.5",
     "cron": "^1.8.2",
@@ -27,7 +28,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "fetch-mock-jest": "^1.5.1",
-    "node-cron": "^3.0.0",
+    "luxon": "^2.1.1",
     "passport": "^0.5.0",
     "passport-github2": "^0.1.12",
     "readline-sync": "^1.4.10",
